# godot-rapier-physics

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  DIAGRAM.md  DOCUMENTATION.md  LICENSE  README.md  SConstruct  THIRDPARTY.txt  build-mac-rel.sh  build-mac.sh  build.bat  build.sh  godot-rapier.code-workspace  godot.code-workspace  rust-toolchain.toml  rustfmt.toml
.cargo/: config.nothreads.toml  config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android_builds.yml  compatibility_checks.yml  deploy.yml  determinism_checks.yml  godot_builds.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  module_builds.yml  release.yml  runner.yml  static_checks.yml  test_checks.yml  web_builds.yml  windows_builds.yml
Godot-rapier-2d/: How To Install.tscn
bin2d/: Marker2D.gd  area_2d.gd  chain.gd  chain.gd.uid  character_body_2d.gd  collider.gd  collision_shape_2d.gd  export_presets.cfg  follower_click.gd  follower_click.gd.uid  logo_square.png.import  main.tscn  marker_2d.gd  marker_2d.gd.uid  new_fluid_effect_2d_surface_tension_akinci.tres  project.godot  ray_cast_2d.gd  rigid_body_2d.gd  rigid_body_2d_2.gd  rigid_body_2d_3.gd  rigid_body_3d.gd  start.gd  start.gd.uid  start.tscn  test.gd  test.gd.uid  test.tscn  test1.tscn  test123.tscn  test_fluid.tscn
bin2d/base/: Global.gd  Global.gd.uid  Utils.gd.uid  pause.gd.uid
bin3d/: logo_square.png.import  project.godot  start.gd  start.gd.uid  start.tscn  test.gd  test.gd.uid  test.tscn  test1.tscn
bin3d/base/: Global.gd  Global.gd.uid  Utils.gd  Utils.gd.uid  pause.gd  pause.gd.uid
bin3d/interactive_3d_joint_tests/: cone_twist_joint_3d_test.tscn  hinge_joint_3d_test.tscn  joint_3d_test.gd  pin_joint_3d_test.tscn  readme.txt
docs/: CONTRIBUTE.md  DOCUMENTATION.md  rapier.af
module/: SCsub  register_types.cpp  register_types.h
module2d/: SCsub  gdextension_static_library_loader.cpp  gdextension_static_library_loader.h  register_types.cpp  register_types.h
module3d/: SCsub  register_types.cpp  register_types.h
samples/godot-rapier2d/: Faucet.gd
scripts/: build-dev-2d-f64.sh  build-dev-2d-web.sh  build-dev-2d.sh  build-dev-3d.sh  build-dev.sh  build-ios-dev-2d.sh  build-mac-dev-2d.sh  build-mac-dev-3d.sh  build-mac-dev.sh  build-mac-rel-2d.sh  build-mac-rel-3d.sh  build-mac-rel.sh  build-rapier.sh  build-rel-2d.sh  build-rel-3d.sh  build-rel.sh  build-web-2d-nothreads.sh  build-web-2d.sh  build-web-3d.sh  build-web.sh  build.sh  ci-sign-macos.ps1  clang-format.sh  clang-tidy.sh  crossplatform-sed.sh  generate-api.sh  lint.sh  test.sh
src/: .gitignore  lib.rs  rapier_area_2d.cpp  rapier_area_2d.h  rapier_body_2d.cpp  rapier_body_2d.h  rapier_body_direct_state_2d.cpp  rapier_body_direct_state_2d.h  rapier_body_utils_2d.cpp  rapier_body_utils_2d.h  rapier_collision_object_2d.cpp  rapier_collision_object_2d.h  rapier_constraint_2d.h  rapier_id.rs  rapier_include.h  rapier_joints_2d.cpp  rapier_joints_2d.h  rapier_physics_server_2d.cpp  rapier_physics_server_2d.h  rapier_project_settings.cpp  rapier_project_settings.h  rapier_shape_2d.cpp  rapier_shape_2d.h  rapier_space_2d.cpp  rapier_space_2d.h  register_types.cpp  register_types.h  types.rs  unique_id.rs
src/bodies/: exportable_object.rs  mod.rs  rapier_area.rs  rapier_area_2d.cpp  rapier_area_2d.h  rapier_area_2d.rs  rapier_body.rs  rapier_body_2d.cpp  rapier_body_2d.h  rapier_body_2d.rs  rapier_collision_object.rs  rapier_collision_object_2d.cpp  rapier_collision_object_2d.h  rapier_collision_object_2d.rs  rapier_collision_object_base.rs  rapier_collision_object_impl.rs  rapier_direct_body_state_2d.cpp  rapier_direct_body_state_2d.h  rapier_direct_body_state_2d.rs  rapier_direct_body_state_3d.rs  rapier_direct_body_state_impl.rs
src/fluids/: fluid_2d.cpp  fluid_2d.h  fluid_2d.rs  fluid_3d.rs  fluid_effect.rs  fluid_effect_2d.cpp  fluid_effect_2d.h  fluid_effect_2d.rs  fluid_effect_2d_elasticity.cpp  fluid_effect_2d_elasticity.h  fluid_effect_2d_elasticity.rs  fluid_effect_2d_surface_tension_akinci.cpp  fluid_effect_2d_surface_tension_akinci.h  fluid_effect_2d_surface_tension_akinci.rs  fluid_effect_2d_surface_tension_he.cpp  fluid_effect_2d_surface_tension_he.h  fluid_effect_2d_surface_tension_he.rs  fluid_effect_2d_surface_tension_wcsph.cpp  fluid_effect_2d_surface_tension_wcsph.h  fluid_effect_2d_surface_tension_wcsph.rs  fluid_effect_2d_viscosity_artificial.cpp  fluid_effect_2d_viscosity_artificial.h  fluid_effect_2d_viscosity_artificial.rs  fluid_effect_2d_viscosity_dfsph.cpp  fluid_effect_2d_viscosity_dfsph.h  fluid_effect_2d_viscosity_dfsph.rs  fluid_effect_2d_viscosity_xsph.cpp  fluid_effect_2d_viscosity_xsph.h  fluid_effect_2d_viscosity_xsph.rs  fluid_effect_3d.rs  fluid_effect_3d_elasticity.rs  fluid_effect_3d_surface_tension_akinci.rs  fluid_effect_3d_surface_tension_he.rs  fluid_effect_3d_surface_tension_wcsph.rs  fluid_effect_3d_viscosity_artificial.rs  fluid_effect_3d_viscosity_dfsph.rs  fluid_effect_3d_viscosity_xsph.rs  fluid_effect_elasticity.rs  fluid_effect_surface_tension_akinci.rs  fluid_effect_surface_tension_he.rs  (+12 more)
src/joints/: mod.rs  rapier_cone_twist_joint_3d.rs  rapier_damped_spring_joint_2d.cpp  rapier_damped_spring_joint_2d.h  rapier_damped_spring_joint_2d.rs  rapier_empty_joint.rs  rapier_generic_6dof_joint_3d.rs  rapier_groove_joint_2d.cpp  rapier_groove_joint_2d.h  rapier_groove_joint_2d.rs  rapier_joint.rs  rapier_joint_2d.cpp  rapier_joint_2d.h  rapier_joint_2d.rs  rapier_joint_base.rs  rapier_pin_joint_2d.cpp  rapier_pin_joint_2d.h  rapier_pin_joint_2d.rs  rapier_pin_joint_3d.rs  rapier_revolute_joint.rs  rapier_slider_joint_3d.rs  rapier_spherical_joint_3d.rs
src/liquids/: liquid_2d.cpp  liquid_2d.h  (+18 more)
src/rapier2d-wrapper/: Cargo.toml  build.bat  build.sh  cbindgen.toml
src/rapier2d-wrapper/includes/: rapier2d_wrapper.h
src/rapier2d-wrapper/src/: body.rs  collider.rs  convert.rs  event_handler.rs  fluid.rs  handle.rs  joint.rs  lib.rs  physics_hooks.rs  physics_world.rs  query.rs  settings.rs  shape.rs  user_data.rs  vector.rs
(+622 files in other folders)
