[package]
name = "godot-rapier"
version = "0.8.19"
edition = "2024"
license = "MIT"
rust-version = "1.91"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["build2d", "test", "parallel"]
test = []
build2d = ["single-dim2", "serde-serialize", "simd-nightly"]
build3d = ["single-dim3", "serde-serialize", "simd-nightly"]
build2d-f64 = ["double-dim2", "serde-serialize", "simd-nightly"]
build3d-f64 = ["double-dim3", "serde-serialize", "simd-nightly"]
dim2 = []
dim3 = []
single = []
double = ["godot/double-precision"]
api-custom = ["godot/api-custom"]
enhanced-determinism = ["rapier2d/enhanced-determinism", "rapier2d-f64/enhanced-determinism", "rapier3d/enhanced-determinism", "rapier3d-f64/enhanced-determinism"]
serde-serialize = ["serde", "hashbrown/serde", "bincode", "serde_json", "godot/serde", "rapier2d/serde-serialize", "rapier2d-f64/serde-serialize", "rapier3d/serde-serialize", "rapier3d-f64/serde-serialize" ]
# Note: SIMD disabled for f64 builds due to upstream rapier bugs with f64 SIMD implementation
# simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly", "rapier3d/simd-nightly", "rapier3d-f64/simd-nightly"]
# simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly", "rapier3d/simd-nightly", "rapier3d-f64/simd-nightly"]
simd-stable = ["rapier2d/simd-stable", "rapier3d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly", "rapier3d/simd-nightly"]
parallel = ["rapier2d/parallel", "rapier2d-f64/parallel", "rapier3d/parallel", "rapier3d-f64/parallel", "num_cpus"] #, "experimental-threads"]
experimental-wasm-nothreads = ["godot/experimental-wasm-nothreads", "godot/lazy-function-tables"]
experimental-wasm = ["godot/experimental-wasm", "godot/lazy-function-tables"]
experimental-threads = ["godot/experimental-threads"]
single-dim2 = ["single", "dim2", "rapier2d", "salva2d"]
double-dim2 = ["double", "dim2", "rapier2d-f64", "salva2d-f64"]
single-dim3 = ["single", "dim3", "rapier3d", "salva3d"]
double-dim3 = ["double", "dim3", "rapier3d-f64", "salva3d-f64"]

[dependencies]
bincode = { version = "1", optional = true }
hashbrown = { version = "0.14" }

num_cpus = { version = "1", optional = true }

godot = { git = "https://github.com/yarwin/gdext", branch = "custom-rapier-branch", features=["register-docs", "safeguards-release-disengaged"] }
# godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features=["register-docs", "safeguards-release-disengaged"] }

rapier2d = { git = "https://github.com/ughuuu/rapier", branch = "master", optional = true }
rapier2d-f64 = { git = "https://github.com/ughuuu/rapier", branch = "master", optional = true}
rapier3d = { git = "https://github.com/ughuuu/rapier", branch = "master", optional = true}
rapier3d-f64 = { git = "https://github.com/ughuuu/rapier", branch = "master", optional = true}
salva2d = { git = "https://github.com/ughuuu/salva", branch = "custom-changes", features = ["rapier"], optional = true }
salva2d-f64 = { git = "https://github.com/ughuuu/salva", branch = "custom-changes", features = ["rapier"], optional = true }
salva3d = { git = "https://github.com/ughuuu/salva", branch = "custom-changes", features = ["rapier"], optional = true }
salva3d-f64 = { git = "https://github.com/ughuuu/salva", branch = "custom-changes", features = ["rapier"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[patch.crates-io]
rapier2d = {git = "https://github.com/ughuuu/rapier", branch = "master"}
rapier2d-f64 = {git = "https://github.com/ughuuu/rapier", branch = "master"}
parry2d = {git = "https://github.com/ughuuu/parry", branch = "master"}
parry2d-f64 = {git = "https://github.com/ughuuu/parry", branch = "master"}

rapier3d = {git = "https://github.com/ughuuu/rapier", branch = "master"}
rapier3d-f64 = {git = "https://github.com/ughuuu/rapier", branch = "master"}
parry3d = {git = "https://github.com/ughuuu/parry", branch = "master"}
parry3d-f64 = {git = "https://github.com/ughuuu/parry", branch = "master"}

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[profile.release.package.rapier2d]
opt-level = 3
codegen-units = 1

[profile.release.package.rapier3d]
opt-level = 3
codegen-units = 1

[profile.release.package.salva2d]
opt-level = 3
codegen-units = 1

[profile.release.package.salva3d]
opt-level = 3
codegen-units = 1

[profile.release.package.godot]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
license-file = "LICENSE"
