[package]
name = "godot-rapier"
version = "0.8.37"
edition = "2024"
license = "MIT"
rust-version = "1.94"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
test = []
dim2 = []
dim3 = []
single = []
double = ["godot/double-precision"]
api-4-4 = ["godot/api-4-4"]
api-4-5 = ["godot/api-4-5"]
api-4-6 = ["godot/api-4-6"]
api-4-7 = ["godot/api-4-7"]
api-custom = ["godot/api-custom"]
register-docs = ["godot/register-docs"]
enhanced-determinism = ["rapier2d?/enhanced-determinism", "rapier2d-f64?/enhanced-determinism", "rapier3d?/enhanced-determinism", "rapier3d-f64?/enhanced-determinism", "glamx?/scalar-math"]
serde-serialize = ["serde", "hashbrown/serde", "bincode", "serde_json", "godot/serde", "rapier2d?/serde-serialize", "rapier2d-f64?/serde-serialize", "rapier3d?/serde-serialize", "rapier3d-f64?/serde-serialize" ]
# Note: SIMD disabled for f64 builds due to upstream rapier bugs with f64 SIMD implementation
# simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly", "rapier3d/simd-nightly", "rapier3d-f64/simd-nightly"]
# simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly", "rapier3d/simd-nightly", "rapier3d-f64/simd-nightly"]
simd-stable = ["rapier2d?/simd-stable", "rapier3d?/simd-stable"]
simd-nightly = ["rapier2d?/simd-nightly", "rapier3d?/simd-nightly"]
parallel = ["rapier2d?/parallel", "rapier2d-f64?/parallel", "rapier3d?/parallel", "rapier3d-f64?/parallel", "salva2d?/parallel", "salva3d?/parallel", "num_cpus"]
experimental-wasm-nothreads = ["experimental-wasm", "godot/experimental-wasm-nothreads"]
experimental-wasm = ["godot/experimental-wasm", "godot/lazy-function-tables"]
experimental-threads = ["godot/experimental-threads"]
single-dim2 = ["single", "dim2", "rapier2d", "salva2d"]
double-dim2 = ["double", "dim2", "rapier2d-f64", "salva2d-f64"]
single-dim3 = ["single", "dim3", "rapier3d", "salva3d", "glamx"]
double-dim3 = ["double", "dim3", "rapier3d-f64", "salva3d-f64", "glamx"]

[dependencies]
bincode = { version = "1", optional = true }
hashbrown = { version = "0.16", features=["inline-more", "default-hasher", "allocator-api2"] }

num_cpus = { version = "1", optional = true }

# Disabled for now "safeguards-release-disengaged"] }
godot = { version = "0.5.4" }
glamx = { version = "0.3", default-features = false, optional = true }

rapier2d = { version = "0.33", optional = true }
rapier2d-f64 = { version = "0.33", optional = true }
rapier3d = { version = "0.33", optional = true }
rapier3d-f64 = { version = "0.33", optional = true }
salva2d = { git = "https://github.com/ughuuu/salva", branch = "try-to-update-to-latest-nalgebra", features = ["rapier"], optional = true }
salva2d-f64 = { git = "https://github.com/ughuuu/salva", branch = "try-to-update-to-latest-nalgebra", features = ["rapier"], optional = true }
salva3d = { git = "https://github.com/ughuuu/salva", branch = "try-to-update-to-latest-nalgebra", features = ["rapier"], optional = true }
salva3d-f64 = { git = "https://github.com/ughuuu/salva", branch = "try-to-update-to-latest-nalgebra", features = ["rapier"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
license-file = "LICENSE"
