[package]
name = "rapier2d-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rapier2d_wrapper"
crate-type = ["staticlib"]	# Creates static lib

[features]
single = []
double = []
enhanced-determinism = ["rapier2d/enhanced-determinism", "rapier2d-f64/enhanced-determinism"]
simd-stable = ["rapier2d/simd-stable", "rapier2d-f64/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly"]
# wasm-bindgen = ["rapier2d/wasm-bindgen", "rapier2d-f64/wasm-bindgen"]
parallel = ["rapier2d/parallel", "rapier2d-f64/parallel"]

[dependencies]
# Revert this when changes to parry enter mainstream
# rapier2d = { features = [ "simd-stable"] }

# This changes the parry contacts to work even in some weird cases where in main branch it would return None
rapier2d = {git = "https://github.com/appsinacup/rapier", branch = "possible-fix-for-contacts"}
rapier2d-f64 = {git = "https://github.com/appsinacup/rapier", branch = "possible-fix-for-contacts"}
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
lto = "fat"
