[package]
name = "rapier2d-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rapier2d_wrapper"
crate-type = ["staticlib"]	# Creates static lib

[features]
single = []
double = []
enhanced-determinism = ["rapier2d/enhanced-determinism", "rapier2d-f64/enhanced-determinism"]
simd-stable = ["rapier2d/simd-stable", "rapier2d-f64/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly", "rapier2d-f64/simd-nightly"]
serde-serialize = ["rapier2d/serde-serialize", "rapier2d-f64/serde-serialize"]
# wasm-bindgen = ["rapier2d/wasm-bindgen", "rapier2d-f64/wasm-bindgen"]
parallel = ["rapier2d/parallel", "rapier2d-f64/parallel"]

[dependencies]
rapier2d = {git = "https://github.com/dimforge/rapier", branch = "master"}
rapier2d-f64 = {git = "https://github.com/dimforge/rapier", branch = "master"}
salva2d = { git = "https://github.com/dimforge/salva", branch = "master", features = ["rapier"] }

[patch.crates-io]
rapier2d = {git = "https://github.com/dimforge/rapier", branch = "master"}
rapier2d-f64 = {git = "https://github.com/dimforge/rapier", branch = "master"}

[profile.release]
codegen-units = 1
lto = "fat"
